<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="activity.SignUpActivity"
    android:background="@mipmap/start_screen">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center">

        <EditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/edittext_start_layout"
            android:ems="10"
            android:hint="@string/edt_email"
            android:importantForAutofill="no"
            android:inputType="text|textEmailAddress"
            android:minHeight="48dp"
            android:padding="10dip"
            android:textAlignment="inherit"
            android:textSize="18sp"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/edt_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/edittext_start_layout"
            android:ems="10"
            android:hint="@string/edt_username"
            android:importantForAutofill="no"
            android:inputType="text"
            android:minHeight="48dp"
            android:padding="10dip"
            android:textAlignment="inherit"
            android:textSize="18sp"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/edittext_start_layout"
            android:ems="10"
            android:hint="@string/edt_password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:padding="10dip"
            android:textAlignment="inherit"
            android:textSize="18sp"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/edt_password_proof"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/edittext_start_layout"
            android:ems="10"
            android:hint="@string/edt_password_proof"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:padding="10dip"
            android:textAlignment="inherit"
            android:textSize="18sp"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/btn_continue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_start_layout"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/btn_continue"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:onClick="continue_click"/>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>